# PixaForge

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
assets_raw/levels/: test_platformer.ldtk
docs/milestones/: milestone_0.md  milestone_1.md  milestone_2.md  milestone_3.md  milestone_3_5.md  milestone_4.md  milestone_4_5.md  milestone_5.md
engine/: CMakeLists.txt
engine/assets/: animation_loader.h  asset_manager.h  asset_pack.h  texture_loader.h
engine/collision/: aabb.h  collision_world.h  debug_draw.h  tile_collision.cpp  tile_collision.h
engine/core/: assert.h  handle.h  log.h  math.h  time.h  types.h  version.cpp  version.h
engine/gameplay/: behavior.h  behavior_registry.h  message.h
engine/input/: action.h  input.cpp  input.h  input_buffer.h  input_map.h  sdl_input.cpp  sdl_input.h
engine/level/: ldtk_loader.cpp  ldtk_loader.h  level.h  level_data.h  level_instance.h  tilemap.h  trigger.h
engine/online/: null_online_service.h  online_service.h
engine/platform/: filesystem.h  gamepad.h  window.h
engine/renderer/: camera.h  color.h  graphics_device.h  pixel_scaler.h  renderer.h  sprite_batch.h  texture.h  tilemap_renderer.h
engine/renderer/backends/: sdl_renderer_backend.cpp  sdl_renderer_backend.h
engine/world/: actor.h  collider.h  component_pool.h  entity.h  sprite.h  transform.h  world.h
game/: CMakeLists.txt  game_state.cpp  game_state.h  main.cpp  platformer_tuning.h  player_physics.cpp  player_physics.h  player_state.h
tools/: CMakeLists.txt
tools/asset_builder/: CMakeLists.txt  main.cpp
tools/level_preview/: CMakeLists.txt  main.cpp
